--- a/webapp/cas-server-webapp-tomcat/build.gradle
+++ b/webapp/cas-server-webapp-tomcat/build.gradle
@@ -5,4 +5,4 @@ dependencies {
 	implementation project(":webapp:cas-server-webapp-init-tomcat")
 }
 
-apply from: file("prod_deps.gradle")
+apply from: rootProject.file("prod_deps.gradle")
